<resources>
    <string name="app_name">RickAndMorty</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="character">Character</string>
    <string name="location">Location</string>
    <string name="episode">Episode</string>
    <string name="searchAnswer">Nothing to show</string>
    <string name="resetFilter">reset filter</string>
    <string name="unknownLocation">unknown location</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="no_internet">no internet</string>
    <string-array name="gender">
        <item></item>
        <item>female</item>
        <item>male</item>
        <item>genderless</item>
        <item>unknown</item>
    </string-array>
    <string-array name="status">
        <item></item>
        <item>alive</item>
        <item>dead</item>
        <item>unknown</item>
    </string-array>
    <string-array name="species">
        <item></item>
        <item>Human</item>
        <item>alien</item>
        <item>unknown</item>
        <item>Humanoid</item>
        <item>Animal</item>
        <item>Robot</item>
    </string-array>
    <string-array name="seasons">
        <item></item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
    </string-array>
</resources>