<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/swipeRefreshLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey"
        tools:context=".MainActivity">
        <TextView
            android:id="@+id/noInternet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_internet"
            android:textAlignment="center"
            android:textSize="30sp"
            android:background="@color/red"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="gone"/>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:theme="@style/Theme.MaterialComponents.Light"
            app:cardCornerRadius="8dp"
            app:cardElevation="12dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toStartOf="@+id/showFilterBtn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/noInternet">

            <androidx.appcompat.widget.SearchView
                android:id="@+id/searchView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:iconifiedByDefault="false"
                app:queryBackground="@android:color/transparent"
                app:queryHint="Search here ..." />


        </com.google.android.material.card.MaterialCardView>

        <ImageButton
            android:id="@+id/showFilterBtn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="20dp"
            android:background="@color/black"
            android:src="@drawable/filter"
            app:layout_constraintBottom_toBottomOf="@id/materialCardView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/materialCardView" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/filter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/materialCardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <TextView
                android:id="@id/seasons"
                app:layout_constraintBottom_toBottomOf="@id/spinnerSeason"
                app:layout_constraintEnd_toStartOf="@+id/spinnerSeason"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/spinnerSeason"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="Season:"
                android:textColor="@color/toxic_green"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/spinnerSeason"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/seasons"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="Status" />

            <Button
                android:id="@+id/btnApplyFilter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinnerSeason"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apply_filter" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/resetFilterBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:text="@string/resetFilter"
            android:textColor="@color/toxic_green"
            android:textStyle="italic"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/resetFilterBtn" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>